--- a/css/main.css
+++ b/css/main.css
@@ -222,6 +222,13 @@
     }
   }
   
+
+  .profile-img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+}
   
   /*
   * Footer
